--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -1,5 +1,20 @@
 Currently:
+  - Bags have vars inside of them, not values (I think this is actually done but gotta check)
+  - Set statements and requirement specifications with vars (pull out requirement spec parsing into utility)
+  - "Locals"
 
+79. Use Black formatter
+78. Treat footers more like macros that get executed within the blocks
+77. _args overhaul to use list of variable dicts, not just numbers
+76. Change _vars to dict
+75. Should "stops" deconstruct the call stack like they do now? In general, how could we do choices within a gosub?
+74. Write a story that allows the reader to write their own story, just for the meta-ness nerd cred
+73. Test for substrings of commands and if it applies do those
+72. Flag command that raises a new boolean var
+71. Re-implement "actions", which are always available choices not presented, but can be analyzed by typing "actions" (they also apply to all sub-blocks, like a footer)
+70. Plural/gender/etc. localizations
+69. Override variable subscripting, turning variables into special dicts before being passed to eval
+68. World object that exists separately for each block (or even just a macro)
 67. Actually write the tests
 65. Special addressing for the "root" block of a *file* rather than of the whole story
 64. Check "extra newline" with consecutive print statements.
