--- a/docs/changelog
+++ b/docs/changelog
@@ -1,4 +1,5 @@
 2024/7/7
+- Implemented better subroutines with "sub" and "subreturn" commands; subroutines now persist between choices
 
 2024/7/6
 - Implemented proof-of-concept Java View and Web View
